[package]
name = "rperf"
version = "0.1.0"
description = ""
authors = ["Neil Tallim <neiltallim@3d-p.com>"]
edition = "2018"
repository = "https://github.com/3d-p/rperf"
license = "<undefined>"
keywords = ["network", "performance", "tcp", "udp"]
categories = ["network-utilities"]
readme = "README.md"

[dependencies]
chrono = "0.4"
clap = "~2.33.3"
core_affinity = "0.5"
ctrlc = "3.1"
env_logger = "0.8"
log = {version = "0.4", features = ["std"]}
mio = "0.6"
nix = "0.20"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
simple-error = "0.2"
uuid = {version = "0.8", features = ["v4"]}
