[package]
name = "rperf"
version = "0.1.8"
description = "validates network throughput capacity and reliability"
authors = ["Neil Tallim <neiltallim@3d-p.com>"]
edition = "2021"
repository = "https://github.com/opensource-3d-p/rperf"
license = "GPLv3"
keywords = ["network", "performance", "tcp", "udp"]
categories = ["network-utilities"]
readme = "README.md"

[dependencies]
chrono = "0.4"
clap = { version = "4.4", features = ["derive", "wrap_help"] }
core_affinity = "0.8"
ctrlc2 = "3.5"
env_logger = "0.10"
log = { version = "0.4", features = ["std"] }
mio = { version = "0.8", features = ["log", "os-poll", "net"] }
nix = { version = "0.27", features = ["net"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple-error = "0.3"
socket2 = { version = "0.5", features = ["all"] }
uuid = { version = "1.6", features = ["v4"] }

#configuration for cargo-deb
#install with "cargo install cargo-deb"
#then "cargo deb" to build simple Debian packages for this project
[package.metadata.deb]
copyright = "(C) 2022 Evtech Solutions, Ltd., dba 3D-P"
license-file = ["COPYING", "0"]
extended-description = """
Rust-based iperf clone with a number of behavioural fixes and corrections, plus
a feature-set aimed at continuous monitoring in an IoT-like environment.
"""
section = "net"
priority = "optional"

[package.metadata.deb.systemd-units]
#don't enable the service by default
enable = false
start = false
